--- a/index.html
+++ b/index.html
@@ -5,16 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAY & NIGHT</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 
 </head>
 
 <body>
-    <h1 id="test"></h1>
+    <header>
+        <a href="index.html" class="logo"><ion-icon name="planet-outline"></ion-icon> World</a>
+        <nav class="right">
+            <div class="btns lightDark">
+                <ion-icon name="sunny-outline"></ion-icon>
+                <ion-icon name="moon-outline"></ion-icon>
+            </div>
+            <div class="btns menuToggle">
+                <ion-icon name="grid-outline"></ion-icon>
+                <ion-icon name="close-circle-outline"></ion-icon>
+            </div>
+        </nav>
+        <ul class="navigation">
+            <li><a href="#" class="active"> <ion-icon name="globe-outline"></ion-icon>Home</a> </li>
+            <li><a href="#">About</a> </li>
+            <li><a href="#">FEATUREs</a> </li>
+            <li><a href="#">CONTACT</a> </li>
+        </ul>
+        <section id="home" class="home">
 
-    <script src="script.js">
+        </section>
+    </header>
 
-    </script>
+
+
+
+
+
+
+    <script src="./js/script.js" type="text/javascript">    </script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
