--- a/index.html
+++ b/index.html
@@ -28,15 +28,28 @@
             <li><a href="#">FEATUREs</a> </li>
             <li><a href="#">CONTACT</a> </li>
         </ul>
-        <section id="home" class="home">
 
-        </section>
     </header>
+    <main>
+
+
+        <section id="home" class="home">
+            <video src="day.mp4"></video>
+            <img src="images/world.png" alt="world map">
+            <h2>
+                World
+            </h2>
+            <p class="text"> LIVE, LIKE, ENJOY IT !!!</p>
+            <ul class="social">
+                <li><ion-icon name="logo-github"></ion-icon>/</li>
+                <li><ion-icon name="logo-linkedin"></ion-icon></li>
+                <li><ion-icon name="logo-facebook"></ion-icon></ion-icon></li>
+            </ul>
+        </section>
 
 
 
-
-
+    </main>
 
 
     <script src="./js/script.js" type="text/javascript">    </script>
