modify html/css images

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
 
         <section id="home" class="home">
-            <video src="day.mp4"></video>
-            <img src="images/world.png" alt="world map">
+            <video src="day.mp4" autoplay muted loop type="mp4"></video>
+            <img class="mask" src="images/world_0.png" alt="world map">
             <h2>
                 World
             </h2>
             <p class="text"> LIVE, LIKE, ENJOY IT !!!</p>
             <ul class="social">
-                <li><ion-icon name="logo-github"></ion-icon>/</li>
+                <li><ion-icon name="logo-github"></ion-icon></li>
                 <li><ion-icon name="logo-linkedin"></ion-icon></li>
                 <li><ion-icon name="logo-facebook"></ion-icon></ion-icon></li>
             </ul>
