--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
             </h2>
             <p class="text"> LIVE, LIKE, ENJOY IT !!!</p>
             <ul class="social">
-                <li><ion-icon name="logo-github"></ion-icon></li>
-                <li><ion-icon name="logo-linkedin"></ion-icon></li>
-                <li><ion-icon name="logo-facebook"></ion-icon></ion-icon></li>
+                <li><a href="#"></a><ion-icon name="logo-github"></ion-icon></li>
+                </li>
+                <li><a href="#"></a><ion-icon name="logo-linkedin"></ion-icon></li>
+                </li>
+                <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
+                </li>
             </ul>
         </section>
 
