--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
 
     </header>
     <ul class="navigation">
-        <li><a href="#" class="active"> <ion-icon name="globe-outline"></ion-icon>Home</a> </li>
-        <li><a href="#">About</a> </li>
-        <li><a href="#">FEATUREs</a> </li>
-        <li><a href="#">CONTACT</a> </li>
+        <li><a href="#" class="active"><ion-icon name="globe-outline"></ion-icon></a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">FEATURES</a></li>
+        <li><a href="#">CONTACT</a></li>
     </ul>
     <main>
 
 
         <section id="home" class="home">
-            <video src="day.mp4" autoplay muted loop type="mp4"></video>
+            <video src="night.mp4" autoplay muted loop type="mp4"></video>
             <img class="mask" src="images/world_0.png" alt="world map">
             <h2>
                 World
             </h2>
             <p class="text"> LIVE, LIKE, ENJOY IT !!!</p>
             <ul class="social">
-                <li><a href="#"></a><ion-icon name="logo-github"></ion-icon></li>
+                <li><a href="#"><ion-icon name="logo-github"></ion-icon></a></li>
                 </li>
-                <li><a href="#"></a><ion-icon name="logo-linkedin"></ion-icon></li>
+                <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
                 </li>
-                <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
+                <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
                 </li>
             </ul>
         </section>
