--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     </header>
     <ul class="navigation">
-        <li><a href="#" class="active"><ion-icon name="globe-outline"></ion-icon></a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="index.html" class="active"><ion-icon name="globe-outline"></ion-icon>home</a></li>
+        <li><a href="#">ABOUT</a></li>
         <li><a href="#">FEATURES</a></li>
         <li><a href="#">CONTACT</a></li>
     </ul>
